Added Edit Room dialog
