# server/SmartHome.Web/Controllers/RoomsController.cs
@@ -1,4 +1,5 @@
 using Microsoft.AspNetCore.Mvc;
+using SmartHome.Core.Domain.Devices;
 using SmartHome.Core.Domain.Enums;
 using SmartHome.Core.Services;
 using SmartHome.Web.Auth;
@@ -12,11 +13,25 @@ public class RoomsController : ControllerBase
 {
     private readonly IAuthService _authService;
     private readonly IRoomsService _roomsService;
+    private readonly IRoomTypesService _roomTypesService;
 
-    public RoomsController(IAuthService authService, IRoomsService roomsService)
+    public RoomsController(IAuthService authService, IRoomsService roomsService, IRoomTypesService roomTypesService)
     {
         _authService = authService;
         _roomsService = roomsService;
+        _roomTypesService = roomTypesService;
+    }
+
+    [Route("rooms-types")]
+    [HttpGet]
+    public async Task<List<RoomTypeModel>> GetRoomTypes()
+    {
+        var devices = await _roomTypesService.GetRoomTypes();
+        return devices.Select(x => new RoomTypeModel
+        {
+            RoomTypeId = x.RoomTypeId,
+            TypeName = x.TypeName,
+        }).ToList();
     }
 
     [Route("my-rooms")]
@@ -39,5 +54,46 @@ public class RoomsController : ControllerBase
             Comment = x.Comment,
             RoomSize = x.RoomSize,
         }).ToList();
+    }
+
+    [Route("update-room")]
+    [HttpPost]
+    [AuthPermission(Permission.RoomsEdit)]
+    public async Task UpdateDevice(UpdateRoomRequest request)
+    {
+        var userId = _authService.GetCurrentUserId();
+        if (userId == null)
+            throw new UnauthorizedAccessException();
+
+        var room = new UserRoom
+        {
+            UserId = userId.Value,
+            UserRoomId = request.UserRoomId,
+            RoomTypeId = request.RoomTypeId,
+            RoomName = request.RoomName,
+            Comment = request.Comment,
+            RoomSize = request.RoomSize,
+        };
+        await _roomsService.UpdateUserRoom(userId.Value, request.UserRoomId, room);
+    }
+
+    [Route("add-room")]
+    [HttpPut]
+    [AuthPermission(Permission.RoomsEdit)]
+    public async Task AddDevice(AddRoomRequest request)
+    {
+        var userId = _authService.GetCurrentUserId();
+        if (userId == null)
+            throw new UnauthorizedAccessException();
+
+        var room = new UserRoom
+        {
+            UserId = userId.Value,
+            RoomTypeId = request.RoomTypeId,
+            RoomName = request.RoomName,
+            Comment = request.Comment,
+            RoomSize = request.RoomSize,
+        };
+        await _roomsService.AddUserRoom(userId.Value, room);
     }
 }
