# server/SmartHome.Web/Model/Rooms/RoomTypeModel.cs
@@ -1,0 +1,9 @@
+﻿namespace SmartHome.Web.Model.Rooms
+{
+    public class RoomTypeModel
+    {
+        public required long RoomTypeId { get; set; }
+
+        public required string TypeName { get; set; }
+    }
+}
